Implement core networking functionality with Engine, Network, Host, and Router classes
- Added Engine class for handling network operations, including ping functionality.
- Implemented Network class to manage nodes and their connections.
- Created Host and Router classes inheriting from Node, with specific packet handling logic.
- Introduced Packet class to encapsulate packet data.
- Developed main application logic with HTTP server using cpprestsdk for network operations.
- Added unit tests for core classes using GoogleTest framework.
- Included JSON adapter for packet serialization and deserialization.
- Updated CMake configuration for building the project and added test executable.
- Created AGENTS.md for build, lint, and test commands, along with code style guidelines.

--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -1,21 +1,40 @@
-cmake_minimum_required(VERSION 3.14)
-project(backend_project VERSION 0.1.0 LANGUAGES CXX)
-
+cmake_minimum_required(VERSION 3.16)
+project(NetSimCPP VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add source files here
-set(SOURCES
+find_package(cpprestsdk REQUIRED) # Microsoft C++ REST SDK
+find_package(nlohmann_json REQUIRED)
+
+add_executable(netsim
     src/main.cpp
+    src/core/Node.cpp
+    src/core/Packet.cpp
+    src/core/Network.cpp
+    src/core/Engine.cpp
+    src/core/Host.cpp
+    src/core/Router.cpp
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+target_include_directories(netsim PRIVATE src)
 
-# Include directories
-target_include_directories(${PROJECT_NAME}
-    PRIVATE
-        ${PROJECT_SOURCE_DIR}/include
+target_link_libraries(netsim PRIVATE cpprestsdk::cpprest nlohmann_json::nlohmann_json)
+
+# Optional: install rules
+install(TARGETS netsim DESTINATION bin)
+
+# Tests
+enable_testing()
+find_package(GTest REQUIRED)
+add_executable(netsim_tests
+    src/test_main.cpp
+    src/core/Node.cpp
+    src/core/Packet.cpp
+    src/core/Network.cpp
+    src/core/Engine.cpp
+    src/core/Host.cpp
+    src/core/Router.cpp
 )
-
-# Example: link libraries if needed
-# target_link_libraries(${PROJECT_NAME} PRIVATE some_library)
+target_include_directories(netsim_tests PRIVATE src)
+target_link_libraries(netsim_tests PRIVATE GTest::gtest_main cpprestsdk::cpprest nlohmann_json::nlohmann_json)
+add_test(NAME netsim_tests COMMAND netsim_tests)
