--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+# Global - Ignore IDE and MD files
 build
 .vscode
 project/AGENTS.md
 AGENTS.md
+
+# Frontend - Logs
+frontend/logs
+
+# Frontend - Node modules
+frontend/node_modules
+
+# Frontend - Build outputs
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
