--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,45 @@
 version: '3.8'
 
 services:
+  # MySQL Database
+  mysql:
+    image: mysql:8.0
+    container_name: netsim-mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: NetSimCPP1234
+      MYSQL_DATABASE: netsim
+      MYSQL_ROOT_HOST: '%'
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./project/database/NetSimDB.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pNetSimCPP1234"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    networks:
+      - netsim-network
+
+  # Adminer - MySQL Web GUI
+  adminer:
+    image: adminer
+    container_name: netsim-adminer
+    restart: unless-stopped
+    ports:
+      - "8081:8080"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    environment:
+      ADMINER_DEFAULT_SERVER: mysql
+    networks:
+      - netsim-network
+
+  # NetSimCPP Server
   netsim:
     build: .
     container_name: netsim-server
@@ -8,6 +47,14 @@ services:
       - "8080:8080"
     environment:
       - SERVER_PORT=8080
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASS=NetSimCPP1234
+      - DB_NAME=netsim
+    depends_on:
+      mysql:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/status"]
       interval: 30s
@@ -23,9 +70,21 @@ services:
     build: .
     container_name: netsim-tests
     command: ["./netsim_tests"]
+    depends_on:
+      - mysql
+    environment:
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASS=NetSimCPP1234
+      - DB_NAME=netsim
     networks:
       - netsim-network
 
 networks:
   netsim-network:
     driver: bridge
+
+volumes:
+  mysql_data:
+    driver: local
