fix: Add MySQL library linking to test targets
- Added mysqlcppconn library to netsim_tests target
- Added mysqlcppconn library to netsim_perf_tests target
- Added MySQL include directories to both test targets
- Fixes undefined reference to sql::mysql::get_driver_instance()

--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -46,8 +46,15 @@ add_executable(netsim_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_tests PRIVATE src)
-target_link_libraries(netsim_tests PRIVATE GTest::gtest_main cpprestsdk::cpprest nlohmann_json::nlohmann_json)
+target_include_directories(netsim_tests PRIVATE src ${MYSQLCPPCONN_INCLUDE})
+target_link_libraries(netsim_tests PRIVATE 
+    GTest::gtest_main 
+    cpprestsdk::cpprest 
+    nlohmann_json::nlohmann_json
+    OpenSSL::SSL 
+    OpenSSL::Crypto
+    ${MYSQLCPPCONN_LIB}
+)
 add_test(NAME netsim_tests COMMAND netsim_tests)
 
 # Performance tests
@@ -60,6 +67,13 @@ add_executable(netsim_perf_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_perf_tests PRIVATE src)
-target_link_libraries(netsim_perf_tests PRIVATE GTest::gtest_main cpprestsdk::cpprest nlohmann_json::nlohmann_json)
+target_include_directories(netsim_perf_tests PRIVATE src ${MYSQLCPPCONN_INCLUDE})
+target_link_libraries(netsim_perf_tests PRIVATE 
+    GTest::gtest_main 
+    cpprestsdk::cpprest 
+    nlohmann_json::nlohmann_json
+    OpenSSL::SSL 
+    OpenSSL::Crypto
+    ${MYSQLCPPCONN_LIB}
+)
 add_test(NAME netsim_perf_tests COMMAND netsim_perf_tests)
