feat: Add WebSocket real-time updates and POST /node/config endpoint
Major Features:
- Implemented WebSocket server on port 9001 for real-time event broadcasting
- Added POST /node/config endpoint for runtime node configuration updates
- Full integration with existing REST API endpoints

WebSocket Implementation:
- Created WebSocketServer class with broadcast capabilities
- Implemented EventBroadcaster singleton for event management
- Added 10 WebSocket event types:
  * node_added, node_removed, node_updated
  * node_failed, node_recovered
  * link_added, link_removed
  * packet_sent, statistics_update, topology_changed
- WebSocket connection acknowledgment with 'connected' event
- Thread-safe broadcasting to all connected clients

Node Configuration Endpoint:
- POST /node/config - update node IP, MTU, and queue size
- Request body: {name, ip?, mtu?, queueSize?}
- Broadcasts node_updated event to all WebSocket clients
- Full validation and error handling

Backend Updates:
- Added setters/getters to Node class: setIp(), setMTU(), getMTU(), setMaxQueueSize(), getMaxQueueSize()
- Added getType() virtual method to Host and Router classes
- Fixed Network::setQueueSize() to use correct method name
- Integrated WebSocket events in main.cpp for all node/link operations

Testing:
- All 61 unit tests passing (including new NodeConfigUpdate test)
- Created test_websocket.sh script for automated WebSocket testing
- Created test_quick.sh for rapid REST API testing
- Added interactive HTML WebSocket client (test_websocket.html)
- Comprehensive test coverage for new /node/config endpoint

Documentation:
- Updated README.md with WebSocket usage examples
- Created docs/WEBSOCKET_API.md with full event documentation
- Added WebSocket section to API documentation
- Documented all 10 WebSocket event types with JSON examples

Docker Integration:
- Added websocketpp and boost libraries to Dockerfile
- Exposed port 9001 in docker-compose.yml
- Updated CI/CD workflow to install websocketpp

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,9 @@ jobs:
           libssl-dev \
           libgtest-dev \
           libmysqlcppconn-dev \
+          libwebsocketpp-dev \
+          libboost-system-dev \
+          libboost-thread-dev \
           mysql-client
     
     - name: Setup database schema
@@ -117,6 +120,9 @@ jobs:
           libssl-dev \
           libgtest-dev \
           libmysqlcppconn-dev \
+          libwebsocketpp-dev \
+          libboost-system-dev \
+          libboost-thread-dev \
           valgrind
     
     - name: Build project
