--- a/project/backend/CMakeLists.txt
+++ b/project/backend/CMakeLists.txt
@@ -6,10 +6,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(cpprestsdk REQUIRED) # Microsoft C++ REST SDK
 find_package(nlohmann_json REQUIRED)
 find_package(OpenSSL REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system thread) # For WebSocket
 
 # MySQL Connector/C++ - for database persistence
 find_library(MYSQLCPPCONN_LIB mysqlcppconn REQUIRED)
 find_path(MYSQLCPPCONN_INCLUDE mysql_driver.h PATH_SUFFIXES mysql-cppconn-8 mysql-cppconn)
+
+# WebSocket++ (header-only library)
+find_path(WEBSOCKETPP_INCLUDE websocketpp/server.hpp PATHS /usr/include /usr/local/include)
 
 add_executable(netsim
     src/main.cpp
@@ -21,7 +25,12 @@ add_executable(netsim
     src/core/Router.cpp
 )
 
-target_include_directories(netsim PRIVATE src ${MYSQLCPPCONN_INCLUDE})
+target_include_directories(netsim PRIVATE 
+    src 
+    ${MYSQLCPPCONN_INCLUDE}
+    ${WEBSOCKETPP_INCLUDE}
+    ${Boost_INCLUDE_DIRS}
+)
 
 target_link_libraries(netsim PRIVATE 
     cpprestsdk::cpprest 
@@ -29,6 +38,9 @@ target_link_libraries(netsim PRIVATE
     OpenSSL::SSL 
     OpenSSL::Crypto
     ${MYSQLCPPCONN_LIB}
+    Boost::system
+    Boost::thread
+    pthread
 )
 
 # Optional: install rules
@@ -46,7 +58,12 @@ add_executable(netsim_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_tests PRIVATE src ${MYSQLCPPCONN_INCLUDE})
+target_include_directories(netsim_tests PRIVATE 
+    src 
+    ${MYSQLCPPCONN_INCLUDE}
+    ${WEBSOCKETPP_INCLUDE}
+    ${Boost_INCLUDE_DIRS}
+)
 target_link_libraries(netsim_tests PRIVATE 
     GTest::gtest_main 
     cpprestsdk::cpprest 
@@ -54,6 +71,9 @@ target_link_libraries(netsim_tests PRIVATE
     OpenSSL::SSL 
     OpenSSL::Crypto
     ${MYSQLCPPCONN_LIB}
+    Boost::system
+    Boost::thread
+    pthread
 )
 add_test(NAME netsim_tests COMMAND netsim_tests)
 
@@ -67,7 +87,12 @@ add_executable(netsim_perf_tests
     src/core/Host.cpp
     src/core/Router.cpp
 )
-target_include_directories(netsim_perf_tests PRIVATE src ${MYSQLCPPCONN_INCLUDE})
+target_include_directories(netsim_perf_tests PRIVATE 
+    src 
+    ${MYSQLCPPCONN_INCLUDE}
+    ${WEBSOCKETPP_INCLUDE}
+    ${Boost_INCLUDE_DIRS}
+)
 target_link_libraries(netsim_perf_tests PRIVATE 
     GTest::gtest_main 
     cpprestsdk::cpprest 
@@ -75,5 +100,8 @@ target_link_libraries(netsim_perf_tests PRIVATE
     OpenSSL::SSL 
     OpenSSL::Crypto
     ${MYSQLCPPCONN_LIB}
+    Boost::system
+    Boost::thread
+    pthread
 )
 add_test(NAME netsim_perf_tests COMMAND netsim_perf_tests)
